# canister-owned-neuron

./: .gitignore  Cargo.toml  LICENSE  README.md  dfx.json  neuron.did  quill
scripts/: deploy.sh  healthcheck.sh  install_quill.sh
src/: auth.rs  lib.rs  signing.rs  transport.rs
src/signer/: Cargo.toml  signer.did
src/signer/src/: controller.rs  lib.rs
